--- a/views/admin/transaction_records.ejs
+++ b/views/admin/transaction_records.ejs
@@ -53,7 +53,7 @@
                             <%}%>
                         <%})%>
                         <td><%=months[transaction.Date_.getMonth()]%> <%=transaction.Date_.getDate()%>, <%=transaction.Date_.getFullYear()%></td>
-                        <td><%=transaction.Amount%></td>
+                        <td>₱ <%=transaction.Amount%></td>
                     </tr>
                     <%})%>
                     </tbody>
