--- a/views/landing/landing.ejs
+++ b/views/landing/landing.ejs
@@ -85,7 +85,7 @@
                     <div class="col-lg-4 mr-auto text-center">
                         <i class="fa fa-tasks fa-3x mb-3 text-muted"></i>
                         <!-- Make sure to change the email address in BOTH the anchor text and the link target below!-->
-                        <a class="d-block" href="/adminlogin" style="color: black;">Admin Protal</a>
+                        <a class="d-block" href="/adminlogin" style="color: black;">Admin Portal</a>
                     </div>
                 </div>
             </div>
