--- a/views/admin/dashboard.ejs
+++ b/views/admin/dashboard.ejs
@@ -65,7 +65,7 @@
                               <div class="col mr-2">
                                  <div class="text-xs font-weight-bold text-info text-uppercase mb-1">Ongoing Projects
                                  </div>
-                                 <div class="h5 mb-0 font-weight-bold text-gray-800"><%=onProj.length%></div>
+                                 <div class="h5 mb-0 font-weight-bold text-gray-800"><%=onProj.length+1%></div>
                               </div>
                               <div class="col-auto">
                                  <i class="fas fa-clipboard-list fa-2x text-gray-300"></i>
