--- a/views/admin/appointments.ejs
+++ b/views/admin/appointments.ejs
@@ -170,7 +170,7 @@
                                 </form>
                             </div>
                             <div class="col-md-6 text-center">
-                                <form action="/admin/appstatus?id=?id=<%=app.Appointment_ID%>&check=1" method="POST">
+                                <form action="/admin/appstatus?id=<%=app.Appointment_ID%>&check=1" method="POST">
                                     <button type="submit" class="btn btn-success">Approve</button>
                                 </form>
                             </div>
